--- a/index.html
+++ b/index.html
@@ -434,14 +434,15 @@
     </section>
 
 
-
+    <!-- SECTION 3 -->
     <section>
         <div class="wrap ">
             <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
 
                 <div class="w-100 d-block d-md-none">
                     <!-- Mobile image -->
-                    <img src="./Img/Snapshoot Portfolio.png" class="img-fluid d-block d-md-none p-3" alt="Mobile Image" />
+                    <img src="./Img/Snapshoot Portfolio.png" class="img-fluid d-block d-md-none p-3"
+                        alt="Mobile Image" />
                 </div>
 
                 <!-- Mobile Info -->
@@ -580,12 +581,10 @@
                                 </div>
 
                                 <div class="d-flex gap-2 flex-wrap">
-                                    <a
-                                        class="btn btn-primary">
+                                    <a class="btn btn-primary">
                                         See live <img src="Icon.png" alt="" />
                                     </a>
-                                    <a class="btn btn-outline-secondary"
-                                        >
+                                    <a class="btn btn-outline-secondary">
                                         See source <img src="Frame.png" alt="" />
                                     </a>
                                 </div>
@@ -597,8 +596,175 @@
         </div>
     </section>
 
+
+    <!-- SECTION 4 -->
+    <section>
+        <div class="wrap ">
+            <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
+
+                <div class="w-100 d-block d-md-none">
+                    <!-- Mobile image -->
+                    <img src="./Img/Snapshoot Portfolio 01.png" class="img-fluid d-block d-md-none p-3"
+                        alt="Mobile Image" />
+                </div>
+
+                <!-- Mobile Info Ready-->
+                <div class="p-3 d-block d-md-none" style="width: 100%;">
+                    <h1 class="fw-bold fs-1">Tonic</h1>
+                    <div style="width: 100%;">
+                        <p class="fs-4">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-5">
+                                Back-End Developer
+                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5">2015</p>
+                    </div>
+                    <p class="fs-5 fw-semibold text-secondary">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it 1960s.
+                    </p>
+                    <section class="d-flex flex-wrap gap-2 mb-3">
+                        <span class="cond fw-semibold">HTML</span>
+                        <span class="cond fw-semibold">CSS</span>
+                        <span class="cond fw-semibold">JavaScript</span>
+                    </section>
+                    <button type="button" class="btn btn-primary mt-3 botn " data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropUnites">
+                        See project
+                    </button>
+                </div>
+
+
+                <!-- Desktop Info -->
+                <div class="p-3 d-none d-md-flex d-md-block align-items-center flex flex-row gap-4"
+                    style="width: 100%;">
+                    <div class="w-50">
+                        <!-- Desktop image -->
+                        <img src="./Img/Snapshoot Portfolio.png" class="img-fluid d-none d-md-block p-3"
+                            alt="Desktop Image" width="100%" height="95%" class="mt-3" />
+                    </div>
+                    <div class="w-50">
+                        <h1 class="fw-bold fs-40">Uber Navigation</h1>
+                        <div style="width: 100%;">
+                            <p class="fs-4">Lead Developer <i class='bx bxs-circle'> </i><span class="text-secondary">
+                                    Front-End dev
+                                </span><i class='bx bxs-circle'></i><span class="text-secondary"> 2018
+                            </p>
+                        </div>
+
+                        <p class="fs-2 text-secondary">
+                            A smart assistant to make driving more safe, efficient, and fun by unlocking your most
+                            expensive computer: your car.
+                        </p>
+                        <section class="d-flex flex-wrap gap-2 mb-3">
+                            <span class="cond fw-semibold p-2">HTML</span>
+                            <span class="cond fw-semibold p-2">Bootstrap CSS</span>
+                            <span class="cond fw-semibold p-2">JavaScript</span>
+                            <span class="cond fw-semibold p-2">Ruby on rails</span>
+                        </section>
+                        <button type="button" class="btn btn-primary mt-3 botn " data-bs-toggle="modal"
+                            data-bs-target="#staticBackdropUnites">
+                            See project
+                        </button>
+                    </div>
+                </div>
+            </aside>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdropUnites" data-bs-backdrop="static" data-bs-keyboard="false"
+            tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-lg" style="max-width: 968px;">
+                <div class="modal-content p-3">
+                    <button type="button" class="btn-close styleIt" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                    <!-- desktop Modal -->
+                    <div class="modal-body p-3 d-none d-md-block">
+                        <h1 class="fw-bold fs-40">Uber Navigation</h1>
+                        <div style="width: 100%;">
+                            <p class="fs-4 font-semibold">Uber <i class='bx bxs-circle'> </i><span
+                                    class="text-secondary"> Lead Developer
+                                </span><i class='bx bxs-circle'></i><span class="text-secondary"> 2018
+                            </p>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <!-- image -->
+                                <img src="./Img/Snapshoot Portfolio.png" class="img-fluid d-none d-md-block p-3"
+                                    alt="Desktop" />
+                            </div>
+
+                            <div class="col-md-6 d-flex flex-column">
+                                <p class="fs-5 fw-semibold text-secondary">
+
+                                    A smart assistant to make driving more safe, efficient, and fun by unlocking your
+                                    most expensive computer: your car.
+                                </p>
+
+                                <div class="d-flex flex-wrap gap-2 mb-3">
+                                    <span class="cond fw-semibold p-2">HTML</span>
+                                    <span class="cond fw-semibold p-2">Bootstrap CSS</span>
+                                    <span class="cond fw-semibold p-2">JavaScript</span>
+                                    <span class="cond fw-semibold p-2">Ruby on rails</span>
+                                </div>
+
+                                <div class="d-flex gap-2 flex-wrap">
+                                    <a class="btn btn-primary">
+                                        See live <img src="Icon.png" alt="" />
+                                    </a>
+                                    <a class="btn btn-outline-secondary">
+                                        See source <img src="Frame.png" alt="" />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Mobile Modal -->
+                    <div class="modal-body p-3 d-block d-md-none">
+                        <h1 class="fw-bold fs-2">Tonic</h1>
+                        <p class="fs-5 ">
+                            CANOPY<i class='bx bxs-circle'></i> <span class="text-secondary">Back-End Dev</span>
+                            <i class='bx bxs-circle'></i> <span class="text-secondary"> 2015</span>
+                        </p>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="./Img/Snapshoot Portfolio 01.png" class="img-fluid d-block d-md-none p-3" alt="Mobile" />
+                            </div>
+
+                            <div class="col-md-6 d-flex flex-column justify-content-between">
+                                <p class="fs-5 fw-semibold text-secondary">
+                                    It designs your websites, which are your face in the online world. It offers
+                                    solutions to all your needs, including e-commerce sites.
+                                </p>
+
+                                <div class="d-flex flex-wrap gap-2 mb-3">
+                                    <span class="cond fw-semibold p-2">HTML</span>
+                                    <span class="cond fw-semibold p-2">CSS</span>
+                                    <span class="cond fw-semibold p-2">JavaScript</span>
+                                </div>
+
+                                <!-- href="https://360agency22.netlify.app/" target="_blank"  -->
+                                <div class="d-flex gap-2 flex-wrap">
+                                    <a class="btn btn-primary">
+                                        See live <img src="Icon.png" alt="" />
+                                    </a>
+                                    <a 
+                                        class="btn btn-outline-secondary">
+                                        See source <img src="Frame.png" alt="" />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!--Mobile screen4-->
-    <div class="wraps yesDisplay">
+    <!-- <div class="wraps yesDisplay">
         <aside class="boxi  mobile rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
                 <img src="./Img/Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="p-3"
@@ -624,137 +790,11 @@
                 </button>
             </div>
         </aside>
-    </div>
-
-
-    <!--Modal Content screen4-->
-    <div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-sm" style="max-width: 968px;">
-            <div class="modal-content p-3 ">
-                <button type="button " class="btn-close styleIt" data-bs-dismiss="modal" aria-label="Close"></button>
-                <div class="modal-body p-1">
-                    <div class="">
-                        <h1 class="fw-bold fs-40">Tonic</h1>
-                        <p class="fs-4">CANOPY<i class='bx bxs-circle'></i> <span class="text-secondary">Back End
-                                Dev</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2015</p>
-                    </div>
-                    <div style="width: 100%;">
-                        <img src="./Img/Snapshoot Portfolio 01.png" alt="" width="100%" height="100%" class="p-3"
-                            style="width: 100%;">
-                    </div>
-                    <div class="d-flex m-1">
-                        <div style="width: 100%;">
-                            <p class="noDisplay">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of type and scrambled it 1960s. Lorem Ipsum is
-                                simply dummy text of the printing and typesetting industry.</p>
-                            <p class="noDisplay">Lorem Ipsum has been the industry's standard dummy text ever since the
-                                1500s, when an unknown printer took a galley of type and scrambled it 1960s with the
-                                releorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum han printer took a galley of type and scrambled it 1960s with the releawn printer
-                                took a galley of type and scrambled it 1960s.</p>
-                            <p class="yesDisplay">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book. It has survived not only five centuries, but also the leap into electronic
-                                typesetting, remaining essent</p>
-                        </div>
-                        <div class="sect0" style="flex-wrap: wrap; max-width: 100%;">
-                            <span class=" cond fw-semibold p-1">html</span>
-                            <span class=" cond fw-semibold p-1">css</span>
-                            <span class=" cond fw-semibold p-1">Javascript</span>
-                            <div class="box">
-                                <!-- <span class=" cond fw-semibold p-1">Ruby</span> -->
-                                <span class=" cond fw-semibold p-1">Bootstrap</span>
-                            </div>
-                            <div class="box3 border-top m-2">
-                                <button type="button" class="botn02">see live <img src="Icon.png" alt=""></button>
-                                <button type="button" class="botn2">See source <img src="Frame.png" alt=""></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--Desktop screen4 -->
-    <div class="wrap noDisplay">
-        <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
-            <div class="p-3" style="width: 100%;">
-                <h1 class="fw-bold fs-40">Uber Navigation</h1>
-                <span>
-                    <p class="fs-4">Uber<i class='bx bxs-circle'></i> <span class="text-secondary">Lead Developer</span>
-                        <i class='bx bxs-circle'></i> <span class="text-secondary">2018
-                    </p>
-                </span>
-                <br>
-                <h5 style="color: #344563;" class="fs-4">
-                    A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive
-                    computer: your car.
-                </h5>
-                <section class="sect">
-                    <span class=" cond fw-semibold">html</span>
-                    <span class=" cond fw-semibold">Ruby on rails</span>
-                    <span class=" cond fw-semibold">css</span>
-                    <span class=" cond fw-semibold">javascript</span>
-                </section>
-                <br>
-                <button type="button" class="botn" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">See
-                    project</button>
-            </div>
-            <div style="width: 100%;">
-                <img src="./Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="">
-            </div>
-        </aside>
-        <!--Desktop Screen4 Modal-->
-        <div class="modal fade " id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-sm" style="max-width: 968px;height: 120vh;">
-                <div class="modal-content p-3 ">
-                    <button type="button " class="btn-close styleIt" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                    <div class="modal-body p-1">
-                        <div class="">
-                            <h1 class="fw-bold fs-40">Uber Navigation</h1>
-                            <p class="fs-4">Uber<i class='bx bxs-circle'></i> <span class="text-secondary">Lead
-                                    Developer</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2018
-                            </p>
-                        </div>
-                        <div style="width: 100%;">
-                            <img src="./Img/Snapshoot Portfolio.png" alt="" width="100%" height="50%" class="p-3"
-                                style="width: 100%; height: 50%;">
-                        </div>
-                        <div class="d-flex" style="height: 100%;">
-                            <h5 style="color: #344563;" class="fs-4">
-                                A smart assistant to make driving more safe, efficient, and fun by unlocking your most
-                                expensive
-                                computer: your car.
-                            </h5>
-                            <div class="sect0" style="flex-wrap: wrap; max-width: 100%;">
-                                <span class=" cond fw-semibold p-1">html</span>
-                                <span class=" cond fw-semibold p-1">css</span>
-                                <span class=" cond fw-semibold p-1">Ruby On rails</span>
-                                <div class="box">
-                                    <span class=" cond fw-semibold p-1">Javascript</span>
-                                </div>
-                                <div class="box3 border-top m-2">
-                                    <button type="button" class="botn02">see live <img src="Icon.png" alt=""></button>
-                                    <button type="button" class="botn2">See source <img src="Frame.png" alt=""></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> i
-    </div>
+    </div> -->
 
 
 
-
-    <!--Desktop and Mobile screen-->
+    <!--ABOUT SECTION-->
     <div id="About"></div>
     <div style="background-color: #ffffff;" class="boxil2">
         <div class="d-flex boxil">
